// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Scene API /api/scenes GET should retun all scene 1`] = `
Array [
  Object {
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": 1,
    "description": "this is a test",
    "name": "scene_1",
    "sceneId": 1,
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
  Object {
    "createdAt": "2018-01-01T00:00:00.000Z",
    "createdBy": 1,
    "description": "this is a second test",
    "name": "scene_2",
    "sceneId": 2,
    "updatedAt": "2018-01-02T00:00:00.000Z",
  },
]
`;

exports[`Scene API /api/scenes POST should create a scene 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "this is a test scene",
  "name": "testScene",
  "sceneId": 3,
  "updatedAt": Any<Date>,
}
`;

exports[`Scene API /api/scenes POST should create a scene 2`] = `
Array [
  RowDataPacket {
    "actionId": 4,
    "body": "{\\"on\\":true}",
    "name": "action",
    "sceneId": 3,
    "targetId": 2,
    "type": "DIO",
  },
]
`;

exports[`Scene API /api/scenes/:id GET should retun a scene 1`] = `Object {}`;

exports[`Scene API /api/scenes/:id PATCH should update a scene 1`] = `
Object {
  "createdAt": Any<Date>,
  "createdBy": 1,
  "description": "this is an updated test",
  "name": "scene_2",
  "sceneId": 2,
  "updatedAt": Any<Date>,
}
`;
